--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html Lang="en">
     <head>
         <title>Wilson C</title>
-        <link rel="icon" href="./resources/icons/favicon.png" sizes="any" type="image/png">
+        <link rel="icon" href="resources/icons/favicon.png" sizes="any" type="image/png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible">
