--- a/tumble.html
+++ b/tumble.html
@@ -2,7 +2,7 @@
 <html Lang="en">
     <head>
         <title>TUMBLE</title>
-        <link rel="icon" href="./resources/icons/favicon.png" sizes="any" type="image/png">
+        <link rel="icon" href="resources/icons/favicon.png" sizes="any" type="image/png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible">
@@ -132,7 +132,6 @@
         </section>
         <marquee>Thanks for visiting <span class="right-32"></span>感谢光临<span class="right-32"></span>Makasih sudah datang<span class="right-32"></span>வருகைக்கு நன்றி</marquee>
         <div id="footer"></div>
-        <script src="interact.js"></script>
         <script>
             $("#header").load("header.html");
             $("#footer").load("footer.html");
