Minor style fixes

--- a/tairot.html
+++ b/tairot.html
@@ -52,9 +52,9 @@
                     <br><br>
                     An "under the hood" feature that was suggested by Asya records the exact millisecond timestamp that the user "pulls" a card and uses that to seed a randomiser that assigns which card from the deck is being revealed. Although not made apparent to the user as a conscious decision, this was done in hopes of creating a stronger connection and meaning in each card that is being revealed to the users.
                     <br><br>
-                    Alternating between Light & Dark Mode is automatically applied based on the user's browser/system settings.
+                    Alternating between Light & Dark mode is automatically applied based on the user's browser/system settings.
                     <br><br>
-                    A Gallery feature was added as part of an update, which allows users to submit their readings anonymously to a public database.  In turn, users can also browse the gallery to understand what questions have been asked by others. This was subsequently expanded upon with a fuzzy Search and Sorting feature, as the number of entries have increased with usage.</p>
+                    A Gallery feature was added as part of an update, which allows users to submit their readings anonymously to a public database.  In turn, users can also browse the gallery to peek at questions that have been asked by others. This was subsequently expanded upon with a fuzzy Search and Sorting feature, as the number of entries have increased with usage.</p>
                 </div>
             </div>
             <div class="row gap-12">
