Minor Styling and Content update

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <section id="biography" class="grid">
             <img src="resources/images/wilsonchang.jpg">
             <div>
-                <h5><b>Wilson Chang</b> (b. 1997, Singapore) is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions.</h5>
+                <h5><em class="medium">Wilson Chang</em> (b. 1997, Singapore) is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions.</h5>
                 <br>
                 <h5>Obsessed with emerging technologies such as artificial intelligence,  blockchain and quantum computing, his commercial work aims to deliver the complexity of the future in the context of today, while discovering virtual interactions and relational aesthetics through the lens of tech in his creative projects.</h5>
             </div>
@@ -37,7 +37,13 @@
                                 <h5 class="primary">Product Designer</h5>
                                 <h5 class="light contrast">OKX</h5>
                             </div>
-                            <p class="caption">Joined the Growth Product & Engineering team as part of the Supernova program.</p>    
+                            <p class="caption">Increased the market share for Price pages of trending tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.</p>
+                            <br>
+                            <p class="caption">Attained 100K clicks in daily traffic on the website, by establishing new webpages and features that correspond most to users' search intents and continuous optimisation through research.</p>
+                            <br>
+                            <p class="caption">Increased the rate of users completing a Share by 56%, through a complete overhaul and redesigning legacy components and content which made data visualisation simplified, clean and less complex.</p>
+                            <br>
+                            <p class="caption">Spearheaded and established collaboration with Singapore Product Design, in order to increase the influence and bring exposure to the design philosophy of OKX within the local design community.</p>
                         </div>
                         <p class="caption">Jan 2024 – Present</p>
                     </div>
