--- a/hostile-architecture.html
+++ b/hostile-architecture.html
@@ -27,7 +27,7 @@
             <div class="row gap-12">
                 <span class="column gap-12"></span>
                 <div class="column">
-                    <h5><b>The Average Singaporean's Guide to Hostile Architecture</b> is a visual project depicted as a guidebook on the socio-political issue of hostile architecture within the context of Singapore. Project collaterals includes a comprehensive publication featuring extensive and meticulously curated text and images, a series of conceptual photographs, and a soft guerilla marketing campaign.</h5>    
+                    <h5><em class="medium">The Average Singaporean's Guide to Hostile Architecture</em> is a visual project depicted as a guidebook on the socio-political issue of hostile architecture within the context of Singapore. Project collaterals includes a comprehensive publication featuring extensive and meticulously curated text and images, a series of conceptual photographs, and a soft guerilla marketing campaign.</h5>    
                 </div>
             </div>
             <div class="row gap-12">
