--- a/nostaigia.html
+++ b/nostaigia.html
@@ -28,7 +28,7 @@
                 <span class="column gap-12"></span>
                 <div class="column">
                     <h5>
-                        <b>nostAIgia</b> is an interactive installation that presents viewers with the experience of viewing a curated slideshow of photographs from Gibson-Hill’s collection, alongside a computer vision model which detects and names subjects within the image.
+                        <em class="medium">nostAIgia</em> is an interactive installation that presents viewers with the experience of viewing a curated slideshow of photographs from Gibson-Hill’s collection, alongside a computer vision model which detects and names subjects within the image.
                         <br><br>
                         This project was exhibited at the Arts House in Singapore and ART SPACE in Busan, as part of Liminal Landscapes, which relives the street photographic work of C.A. Gibson-Hill depicting life in Singapore and Malaya in the 1940s-60s.
                     </h5>
