--- a/tairot.html
+++ b/tairot.html
@@ -30,7 +30,7 @@
             <div class="row gap-12">
                 <span class="column gap-12"></span>
                 <div class="column">
-                    <h5><b>tAIrot</b> is a virtual tarot card reading experience powered by AI.
+                    <h5><em class="medium">tAIrot</em> is a virtual tarot card reading experience powered by AI.
                     <br><br>
                     This project was presented at the Conscious Festival 2023 in collaboration with the Deloitte Center for the Edge.</h5>    
                 </div>
