--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible">
-        <meta property="description" content="Wilson Chang is a product designer and occasional creative technologist whose work is centred around bridging human-computer interactions."/>
+        <meta property="description" content="Wilson Chang is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions."/>
         <meta property="og:image" content="https://wilsonchangjy.com/resources/preview.jpg"> 
         <meta property="og:site_name" content="Wilson C">
         <meta property="og:title" content="Wilson C">
-        <meta property="og:description" content="Wilson Chang is a product designer and occasional creative technologist whose work is centred around bridging human-computer interactions." />
+        <meta property="og:description" content="Wilson Chang is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions." />
         <meta property="og:url" content="https://wilsonchangjy.com">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
