--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible">
         <meta property="description" content="Wilson Chang is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions."/>
-        <meta property="og:image" content="https://wilsonchangjy.com/resources/preview.jpg"> 
+        <meta property="og:image" content="https://wilsonchangjy.com/resources/images/preview.jpg"> 
         <meta property="og:site_name" content="Wilson C">
         <meta property="og:title" content="Wilson C">
         <meta property="og:description" content="Wilson Chang is a product designer, UX engineer and occasional creative technologist whose work is centred around bridging human-computer interactions." />
@@ -22,9 +22,11 @@
         <section id="landing" class="wrap">
             <h1>Hello World,</h1>
             <span class="sticker"></span>
-            <h1>I’m Wilson C</h1>
+            <h1>I’m Wilson C,</h1>
             <span class="sticker"></span>
-            <h1>a Product Designer,</h1>
+            <h1>a Product</h1>
+            <span class="sticker"></span>
+            <h1>Designer,</h1>
             <span class="sticker"></span>
             <h1>UX Engineer</h1>
             <span class="sticker"></span>
@@ -32,7 +34,9 @@
             <span class="sticker"></span>
             <h1>occassional</h1>
             <span class="sticker"></span>
-            <h1>Creative Technologist</h1>
+            <h1>Creative</h1>
+            <span class="sticker"></span>
+            <h1>Technologist</h1>
             <span class="sticker"></span>
             <h1>based in</h1>
             <span class="sticker"></span>
