--- a/okx-growth.html
+++ b/okx-growth.html
@@ -30,6 +30,36 @@
                     <h5 class="tertiary">Further details withheld due to prevailing non-disclosures, please request for a private discussion.</h5>
                 </div>
             </div>
+            <div class="row gap-12">
+                <span class="column"></span>
+                <div class="column gap-32">
+                    <h3>User Engagement</h3>
+                    <!-- <img src="/resources/images/okxgrowth.jpg"> -->
+                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components which made data visualisation simplified, clean and less complex.</p>
+                </div>
+            </div>
+            <div class="row gap-12">
+                <span class="column"></span>
+                <div class="column gap-32">
+                    <h3>Organic Traffic</h3>
+                    <p>
+                        Attained 100K clicks in daily traffic on the OKX website, by establishing new webpages and features that correspond most to users’ search intents and continuous optimisation through research.
+                        <br><br>
+                        Increased the market share for Price pages of trending tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.
+                    </p>
+                </div>
+            </div>
+            <div class="row gap-12">
+                <span class="column"></span>
+                <div class="column gap-32">
+                    <h3>Internal Tools</h3>
+                    <p>
+                        Established a new system to support affiliates and business developers in sending and distributing gifts to their community as part of their user acquisition campaigns and growth activities.
+                        <br><br>
+                        Revamped and optimised legacy systems to improve usability and produce a scalable point of reference for future expansion.
+                    </p>
+                </div>
+            </div>
         </section>
         <marquee>Thanks for visiting <span class="right-32"></span>感谢光临<span class="right-32"></span>Makasih sudah datang<span class="right-32"></span>வருகைக்கு நன்றி</marquee>
         <div id="footer"></div>
