--- a/tumble.html
+++ b/tumble.html
@@ -29,7 +29,7 @@
             <div class="row gap-12">
                 <span class="column"></span>
                 <div class="column gap-32">
-                    <h5><b>TUMBLE</b> is an application concept (for both mobile and tablet screens) that provides a solution to improve the experience of doing laundry as a student resident living in the campus halls.
+                    <h5><em class="medium">TUMBLE</em> is an application concept (for both mobile and tablet screens) that provides a solution to improve the experience of doing laundry as a student resident living in the campus halls.
                     <br><br>
                     This project was completed over the course of a semester in collaboration as a team of students for a university project, where I contributed as an UX designer & researcher, as well as project manager.</h5>
                 </div>
