--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <span class="sticker"></span>
             <h1>I’m Wilson C,</h1>
             <span class="sticker"></span>
-            <h1>a Product</h1>
-            <span class="sticker"></span>
-            <h1>Designer,</h1>
+            <h1>a Product Designer</h1>
             <span class="sticker"></span>
             <h1>UX Engineer</h1>
             <span class="sticker"></span>
@@ -34,9 +32,7 @@
             <span class="sticker"></span>
             <h1>occassional</h1>
             <span class="sticker"></span>
-            <h1>Creative</h1>
-            <span class="sticker"></span>
-            <h1>Technologist</h1>
+            <h1>Creative Technologist</h1>
             <span class="sticker"></span>
             <h1>based in</h1>
             <span class="sticker"></span>
