Minor Styling and Content updates

--- a/okx-growth.html
+++ b/okx-growth.html
@@ -35,7 +35,7 @@
                 <div class="column gap-32">
                     <h3>User Engagement</h3>
                     <!-- <img src="/resources/images/okxgrowth.jpg"> -->
-                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components which made data visualisation simplified, clean and less complex.</p>
+                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components and content which made data visualisation simplified, clean and less complex.</p>
                 </div>
             </div>
             <div class="row gap-12">
