--- a/tairot.html
+++ b/tairot.html
@@ -22,7 +22,7 @@
                         <h5>UX Design, Full Stack Development</h5>
                         <h5 class="tertiary">Aug 2023</h5>
                     </div>
-                    <a href="https://tairot.app" target="_blank"><h5 class="primary underline">tairot.app</h5></a>
+                    <a href="https://tairot.app" target="_blank" class="row"><h5 class="primary underline">tairot.app</h5><img src="/resources/icons/link.svg" id="link"></a>
                 </div>
             </div>
         </section>
