Added Dark Mode

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
@@ -34,7 +35,7 @@
                    <div class="list-item grid">
                         <div>
                             <div class="row bottom-8">
-                                <h5 class="primary">Product Designer</h5>
+                                <h5>Product Designer</h5>
                                 <h5 class="light contrast">OKX</h5>
                             </div>
                             <p class="caption">Increased the market share for Price pages of trending tokens by 1425% and therefore frequently ranked #1 on Google search results, through revamping designs to become scalable and configurable while ensuring content provided to users is relevant and valuable.</p>
@@ -50,7 +51,7 @@
                     <div class="list-item grid">
                         <div>
                             <div class="row bottom-8">
-                                <h5 class="primary">UI/UX Designer, Intern</h5>
+                                <h5>UI/UX Designer, Intern</h5>
                                 <h5 class="light contrast">GovTech</h5>
                             </div>
                             <p class="caption">Worked on a variety of citizen-related projects under the LifeSG Design team. Designed screens for various platforms, adhering closely to the robust design system.</p>    
@@ -64,7 +65,7 @@
                     <div class="list-item grid">
                         <div>
                             <div class="row bottom-8">
-                                <h5 class="primary">Web & UI/UX Designer, Intern</h5>
+                                <h5>Web & UI/UX Designer, Intern</h5>
                                 <h5 class="light contrast">Oangle</h5>
                             </div>
                             <p class="caption">Designed, wireframed and built websites, applications for various devices and screens. Also designed and produced graphic collateral for clients. Revamped the design of Oangle's collaterals, such as name cards in accordance with the new v6 branding.</p>    
@@ -80,21 +81,21 @@
                 <div class="column border-top">
                    <div class="list-item grid">
                         <div>
-                            <h5 class="primary bottom-8">Nanyang Technological University</h5>
+                            <h5 class="bottom-8">Nanyang Technological University</h5>
                             <p class="caption">Bachelor of Fine Arts, Honours (Distinction) - Design Art (Visual Communications, Product & Interaction Design), Minor in Photography</p>    
                         </div>
                         <p class="caption">2019 – 2023</p>
                     </div>
                     <div class="list-item grid">
                         <div>
-                            <h5 class="primary bottom-8">Royal College of Art & Imperial College London</h5>
+                            <h5 class="bottom-8">Royal College of Art & Imperial College London</h5>
                             <p class="caption">Studied under the Global Innovation Design double Master's (MA/MSc) programme as an exchange student during the Autumn term.</p>    
                         </div>
                         <p class="caption">Autumn 2022</p>
                     </div>
                     <div class="list-item grid">
                         <div>
-                            <h5 class="primary bottom-8">Ngee Ann Polytechnic</h5>
+                            <h5 class="bottom-8">Ngee Ann Polytechnic</h5>
                             <p class="caption">Diploma in Multimedia & Animation - Game Art & Design</p>    
                         </div>
                         <p class="caption">2014 – 2017</p>
@@ -109,13 +110,13 @@
                         <div>
                             <div class="bottom-24">
                                 <div class="row bottom-8">
-                                    <h5 class="primary">APE Camp</h5>
+                                    <h5>APE Camp</h5>
                                     <h5 class="light contrast">Arts Council Korea</h5>
                                 </div>
                                 <p class="caption">Seoul, South Korea</p>    
                             </div>
                             <div>
-                                <h5 class="primary bottom-8">Liminal Landscapes</h5>
+                                <h5 class="bottom-8">Liminal Landscapes</h5>
                                 <p class="caption">Singapore & Busan, South Korea</p>    
                             </div>
                         </div>
@@ -125,14 +126,14 @@
                         <div>
                             <div class="bottom-24">
                                 <div class="row bottom-8">
-                                    <h5 class="primary">The Conscious Festival</h5>
+                                    <h5>The Conscious Festival</h5>
                                     <h5 class="light contrast">Green is the New Black & the Deloitte Center for the Edge</h5>
                                 </div>
                                 <p class="caption">Singapore</p>    
                             </div>
                             <div>
                                 <div class="row bottom-8">
-                                    <h5 class="primary">ADM Show: All at Once</h5>
+                                    <h5>ADM Show: All at Once</h5>
                                     <h5 class="light contrast">NTU School of Art, Design & Media</h5>
                                 </div>
                                 <p class="caption">Singapore</p>  
@@ -143,7 +144,7 @@
                         <p class="caption">2022</p>
                         <div>
                             <div class="row bottom-8">
-                                <h5 class="primary">The Festival University: Welcome to Planet B</h5>
+                                <h5>The Festival University: Welcome to Planet B</h5>
                                 <h5 class="light contrast">Ars Electronica & the Johannes Kepler Universität</h5>
                             </div>
                             <p class="caption">Linz, Austria</p>    
@@ -153,7 +154,7 @@
                         <p class="caption">2020</p>
                         <div>
                             <div class="row bottom-8">
-                                <h5 class="primary">Student Archivist Project</h5>
+                                <h5>Student Archivist Project</h5>
                                 <h5 class="light contrast">National Museum of Singapore</h5>
                             </div>
                             <p class="caption">Singapore</p>  
