--- a/header.html
+++ b/header.html
@@ -5,10 +5,10 @@
             <div id="logo"><a class="primary" href="index.html">Wilson C</a></div>
             <span></span>
             <ul id="nav" class="remove-bullet">
-                <li><a class="tertiary" href="about.html">About</a></li>
-                <li><a class="tertiary" href="index.html#content">Work</a></li>
-                <li><a class="tertiary" href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">Contact</a></li>
-                <!-- <li id="appearance"></li> -->
+                <li><a class="secondary" href="about.html">About</a></li>
+                <li><a class="secondary" href="index.html#content">Work</a></li>
+                <li><a class="secondary" href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">Contact</a></li>
+                <li id="appearance"></li>
             </ul>
             <div id="menu"></div>
             <div id="close"></div>
