--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
@@ -22,7 +23,7 @@
         <section id="landing" class="wrap">
             <h1>Hello World,</h1>
             <span class="sticker"></span>
-            <h1>I’m Wilson C,</h1>
+            <h1>I’m Wilson C</h1>
             <span class="sticker"></span>
             <h1>a Product Designer</h1>
             <span class="sticker"></span>
