--- a/nostaigia.html
+++ b/nostaigia.html
@@ -9,17 +9,18 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
-        <div id="header" class="gradient inverse"></div>
-        <section id="landing" class="column inverse">
+        <div id="header" class="gradient dark-mode"></div>
+        <section id="landing" class="column dark-mode">
             <img id="landing-background" src="resources/images/nostaigia.jpg">
-            <div class="bottom-align">
+            <div class="bottom-align primary">
                 <h1 class="medium">Liminal Landscapes: nostAIgia</h1>
                 <div class="row">
-                    <h5>Full Stack Development</h5>
-                    <h5 class="tertiary">April 2024</h5>
+                    <h5 class="">Full Stack Development</h5>
+                    <h5 class="secondary">April 2024</h5>
                 </div>
             </div>
         </section>
