--- a/okx-growth.html
+++ b/okx-growth.html
@@ -9,13 +9,14 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
-        <div id="header"></div>
-        <section id="landing" class="column">
+        <div id="header" class="light-mode"></div>
+        <section id="landing" class="column light-mode">
             <img id="landing-background" src="resources/images/okxgrowth.jpg">
-            <div class="bottom-align">
+            <div class="bottom-align primary">
                 <h1 class="medium">OKX Growth Suite</h1>
                 <div class="row">
                     <h5>UI & UX Design</h5>
@@ -27,7 +28,7 @@
                 <span class="column gap-12"></span>
                 <div class="column gap-32">
                     <h5>Focused on products that drive user growth and engagement, my contributions include establishing new avenues of online traffic, optimising core engagement flows, pioneering 0-to-1 initiatives in collaboration with other product teams, as well as building internal tools for managing reward and gift systems.</h5>
-                    <h5 class="tertiary">Further details withheld due to prevailing non-disclosures, please request for a private discussion.</h5>
+                    <h5 class="secondary">Further details withheld due to prevailing non-disclosures, please request for a private discussion.</h5>
                 </div>
             </div>
             <div class="row gap-12">
