--- a/tumble.html
+++ b/tumble.html
@@ -9,18 +9,19 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
-        <div id="header" class="gradient"></div>
-        <section id="landing" class="column">
-            <img id="landing-background" src="resources/images/tumble.jpg" alt="">
-            <div class="bottom-align">
+        <div id="header" class="gradient light-mode"></div>
+        <section id="landing" class="column light-mode">
+            <img id="landing-background" src="resources/images/tumble.jpg">
+            <div class="bottom-align primary">
                 <h1 class="medium">TUMBLE</h1>
                 <div>
                     <div class="row">
                         <h5>UX Design</h5>
-                        <h5 class="tertiary">Nov 2021</h5>
+                        <h5 class="secondary">Nov 2021</h5>
                     </div>
                 </div>
             </div>
