--- a/hostile-architecture.html
+++ b/hostile-architecture.html
@@ -9,17 +9,18 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
-        <div id="header" class="gradient"></div>
-        <section id="landing" class="column">
+        <div id="header" class="gradient light-mode"></div>
+        <section id="landing" class="column light-mode">
             <img id="landing-background" src="resources/images/hostilearchitecture.jpg">
-            <div class="bottom-align">
+            <div class="bottom-align primary">
                 <h1 class="medium">The Average Singaporean's Guide to Hostile Architecture</h1>
                 <div class="row">
                     <h5>Visual Design, Photography</h5>
-                    <h5 class="tertiary">Nov 2021</h5>
+                    <h5 class="secondary">Nov 2021</h5>
                 </div>
             </div>
         </section>
