--- a/tairot.html
+++ b/tairot.html
@@ -9,20 +9,21 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="colours.css">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </head>
     <body>
-        <div id="header"></div>
-        <section id="landing" class="column">
+        <div id="header" class="light-mode"></div>
+        <section id="landing" class="column light-mode">
             <img id="landing-background" src="resources/images/tairot.jpg" alt="">
-            <div class="bottom-align">
+            <div class="bottom-align primary">
                 <h1 class="medium">tAIrot</h1>
                 <div>
                     <div class="row">
                         <h5>UX Design, Full Stack Development</h5>
-                        <h5 class="tertiary">Aug 2023</h5>
+                        <h5 class="secondary">Aug 2023</h5>
                     </div>
-                    <a href="https://tairot.app" target="_blank" class="row"><h5 class="primary underline">tairot.app</h5><img src="/resources/icons/link.svg" id="link"></a>
+                    <a href="https://tairot.app" target="_blank" class="row center-align"><h5 class="primary underline">tairot.app</h5><img src="/resources/icons/link.svg" id="link"></a>
                 </div>
             </div>
         </section>
@@ -48,7 +49,7 @@
                     <h3>Design Process</h3>
                     <p>The virtual experience is designed with a “mobile priority” in mind, as traditional tarot card readings are regarded as intimate and deeply personal methods of introspection, which fits better in the palm of the users, away from prying eyes on a larger screen.
                     <br><br>
-                    ASCII artwork featured on the tarot cards were done by <a href="https://asyaplugged.in" target="_blank" class="tertiary underline">Asya Davydova Lewis</a>, and used with express permission from the artist.
+                    ASCII artwork featured on the tarot cards were done by <a href="https://asyaplugged.in" target="_blank" class="secondary underline">Asya Davydova Lewis</a>, and used with express permission from the artist.
                     <br><br>
                     An "under the hood" feature that was suggested by Asya records the exact millisecond timestamp that the user "pulls" a card and uses that to seed a randomiser that assigns which card from the deck is being revealed. Although not made apparent to the user as a conscious decision, this was done in hopes of creating a stronger connection and meaning in each card that is being revealed to the users.
                     <br><br>
@@ -65,7 +66,7 @@
                     <h3>Final Outcome</h3>
                     <p>The project was presented at the Conscious Festival in collaboration with the Deloitte Center for the Edge. Based on current usage, there have been more than 10,000 readings completed for users all around the world in various languages.
                     <br><br>
-                    This web application is live and can be found <a href="https://tairot.app" target="_blank" class="tertiary underline">here</a>.</p>
+                    This web application is live and can be found <a href="https://tairot.app" target="_blank" class="secondary underline">here</a>.</p>
                 </div>
             </div>
             <iframe width="100%" height="720" src="https://www.youtube.com/embed/wqA7GcDstpE?si=tGCgOeI4uRjt3oxt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
