Dark Mode and Content Updates

--- a/okx-growth.html
+++ b/okx-growth.html
@@ -35,7 +35,7 @@
                 <span class="column"></span>
                 <div class="column gap-32">
                     <h3>User Engagement</h3>
-                    <!-- <img src="/resources/images/okxgrowth.jpg"> -->
+                    <img src="/resources/images/okxgrowth2.jpg">
                     <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components and content which made data visualisation simplified, clean and less complex.</p>
                 </div>
             </div>
