Minor Styling and Content updates

--- a/okx-growth.html
+++ b/okx-growth.html
@@ -43,6 +43,7 @@
                 <span class="column"></span>
                 <div class="column gap-32">
                     <h3>Organic Traffic</h3>
+                    <img src="/resources/images/okxgrowth3.jpg">
                     <p>
                         Attained 100K clicks in daily traffic on the OKX website, by establishing new webpages and features that correspond most to users’ search intents and continuous optimisation through research.
                         <br><br>
