--- a/tairot.html
+++ b/tairot.html
@@ -15,7 +15,7 @@
     <body>
         <div id="header" class="light-mode"></div>
         <section id="landing" class="column light-mode">
-            <img id="landing-background" src="resources/images/tairot.jpg" alt="">
+            <img id="landing-background" src="resources/images/tairot.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">tAIrot</h1>
                 <div>
