Minor Styling and Content Updates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="sticker"></span>
             <h1>I’m Wilson C</h1>
             <span class="sticker"></span>
-            <h1>a Product Designer</h1>
+            <h1>a Product Designer,</h1>
             <span class="sticker"></span>
             <h1>UX Engineer</h1>
             <span class="sticker"></span>
