Minor Styling and Content update

--- a/new-balance.html
+++ b/new-balance.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="light-mode"></div>
         <section id="landing" class="column light-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/newbalance.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">13 Ways of Looking: New Balance 991ANI</h1>
