--- a/nostaigia.html
+++ b/nostaigia.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="gradient dark-mode"></div>
         <section id="landing" class="column dark-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/nostaigia.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">Liminal Landscapes: nostAIgia</h1>
