--- a/hostile-architecture.html
+++ b/hostile-architecture.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="gradient light-mode"></div>
         <section id="landing" class="column light-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/hostilearchitecture.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">The Average Singaporean's Guide to Hostile Architecture</h1>
