--- a/okx-growth.html
+++ b/okx-growth.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="light-mode"></div>
         <section id="landing" class="column light-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/okxgrowth.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">OKX Growth Suite</h1>
