--- a/tairot.html
+++ b/tairot.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="light-mode"></div>
         <section id="landing" class="column light-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/tairot.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">tAIrot</h1>
