--- a/tumble.html
+++ b/tumble.html
@@ -15,6 +15,7 @@
     <body>
         <div id="header" class="gradient light-mode"></div>
         <section id="landing" class="column light-mode">
+            <div id="landing-span"></div>
             <img id="landing-background" src="resources/images/tumble.jpg">
             <div class="bottom-align primary">
                 <h1 class="medium">TUMBLE</h1>
