--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="sticker"></span>
             <h1>&</h1>
             <span class="sticker"></span>
-            <h1>occassional</h1>
+            <h1>occasional</h1>
             <span class="sticker"></span>
             <h1>Creative Technologist</h1>
             <span class="sticker"></span>
