Minor Styling and Content updates

--- a/okx-growth.html
+++ b/okx-growth.html
@@ -37,9 +37,9 @@
                 <div class="column gap-32">
                     <h3>User Engagement</h3>
                     <img src="/resources/images/okxgrowth2.jpg">
-                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components and content which made data visualisation simplified, clean and less complex.</p>
+                    <p>Increased the rate of users completing a Share by 56%, by overhauling and redesigning legacy components and content which made data visualisation simplified, clean and less complex.
                     <br><br>
-                    <p>Optimised the Home screen across different markets through redesigning modules and interactions, resulting in an increase of the exposure to click-through rate by 69.8% across A/B tests.</p>
+                    Optimised the Home screen across different markets through redesigning modules and interactions, resulting in an increase of the exposure to click-through rate by 69.8% across A/B tests.</p>
                 </div>
             </div>
             <div class="row gap-12">
