Footer & Header styling, and Minor Content updates

--- a/footer.html
+++ b/footer.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html Lang="en">
     <body>
+        <marquee>Interaction Design<span class="right-32"></span>Visual Design<span class="right-32"></span>User Research<span class="right-32"></span>Front-end Development<span class="right-32"></span>Design Thinking</marquee>
         <div class="grid">
             <div>
                 <p>Designed and developed by yours truly</p>
                 <p class="contrast">Copyright &copy; 2025 Wilson C</p>
             </div>
             <span></span>
-            <div class="uppercase">
-                <p class="medium">Portfolio</p>
+            <div>
+                <p class="uppercase medium">Portfolio</p>
                 <ul class="remove-bullet">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="index.html#content">Work</a></li>
                 </ul>
             </div>
-            <div class="uppercase">
-                <p class="medium">Socials</p>
+            <div>
+                <p class="uppercase medium">Socials</p>
                 <ul class="remove-bullet">
-                    <li><a href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">Linkedin</a></li>
-                    <li><a href="https://github.com/wilsonchangjy" target="_blank">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/wilsonchangjy" target="_blank">GitHub</a></li>
                     <li><a href="https://medium.com/@wilsonchangjy" target="_blank">Medium</a></li>
                 </ul>
             </div>
