--- a/header.html
+++ b/header.html
@@ -2,12 +2,12 @@
 <html Lang="en">
     <body>
         <div class="grid">
-            <div id="logo"><a class="primary" href="index.html">Wilson C</a></div>
+            <div id="logo"><a class="primary medium" href="index.html">Wilson C</a></div>
             <span></span>
-            <ul id="nav" class="remove-bullet">
-                <li><a class="secondary" href="about.html">About</a></li>
-                <li><a class="secondary" href="index.html#content">Work</a></li>
-                <li><a class="secondary" href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">Contact</a></li>
+            <ul id="nav" class="remove-bullet uppercase secondary">
+                <li><a href="about.html">About</a></li>
+                <li><a href="index.html#content">Work</a></li>
+                <li><a href="https://www.linkedin.com/in/wilsonchangjy" target="_blank">Contact</a></li>
                 <li id="appearance"></li>
             </ul>
             <div id="menu"></div>
