--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a href="tairot.html" class="card">
                         <img src="resources/images/tairot.jpg" class="bottom-8">
                         <h5 class="primary bottom-4">tAIrot</h5>
-                        <p class="caption">UX Design, Full Stack Development</p>
+                        <p class="caption">Creative Design, Full Stack Development</p>
                     </a>
                     <a href="new-balance.html" class="card">
                         <img src="resources/images/newbalance.jpg" class="bottom-8">
@@ -109,7 +109,6 @@
                 </div>
             </div>
         </section>
-        <marquee>Thanks for visiting <span class="right-32"></span>感谢光临<span class="right-32"></span>Makasih sudah datang<span class="right-32"></span>வருகைக்கு நன்றி</marquee>
         <div id="footer"></div>
         <script src="interact.js"></script>
         <script>
