--- a/tairot.html
+++ b/tairot.html
@@ -21,7 +21,7 @@
                 <h1 class="medium">tAIrot</h1>
                 <div>
                     <div class="row">
-                        <h5>UX Design, Full Stack Development</h5>
+                        <h5>Creative Design, Full Stack Development</h5>
                         <h5 class="secondary">Aug 2023</h5>
                     </div>
                     <a href="https://tairot.app" target="_blank" class="row center-align"><h5 class="primary underline">tairot.app</h5><img src="/resources/icons/link.svg" id="link"></a>
@@ -72,7 +72,6 @@
             </div>
             <iframe width="100%" height="720" src="https://www.youtube.com/embed/wqA7GcDstpE?si=tGCgOeI4uRjt3oxt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
-        <marquee>Thanks for visiting<span class="right-32"></span>感谢光临<span class="right-32"></span>Makasih sudah datang<span class="right-32"></span>வருகைக்கு நன்றி</marquee>
         <div id="footer"></div>
         <script>
             $("#header").load("header.html");
